<resources>
    <!--    String resources @Application-->
    <string name="app_name">Covid Tracker</string>

    <!--     String resources @Login Page-->
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="invalid_email_id">Invalid Email Id</string>
    <string name="invalid_email_id_or_password">Invalid Email Id/Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="email_can_not_be_empty">Email can not be empty</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login_image">login image</string>
    <string name="email_icon">email icon</string>
    <string name="submit">Submit</string>
    <string name="password_icon">password icon</string>

    <!--    String resources @Diagnosis Pending Page-->
    <string name="diagnosis_pending">Diagnosis Pending</string>
    <string name="_345">0</string>
    <string name="number_of_patients_left_to_be_examined">Number of patients left to be examined</string>
    <string name="patients_list">Patient\'s List</string>
    <string name="click_the_card_to_examine_the_patient">Click the card to examine the patient</string>
    <string name="patient_id">Patient Id</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="p1a56">P1A56</string>
    <string name="dummy">Dummy Name</string>
    <string name="_62">62</string>

    <!--    String resources @Patient Details Page-->
    <string name="patients_details">Patients Details</string>
    <string name="p1as56">P1AS56</string>
    <string name="male_62_years_old">Male | 62 years</string>
    <string name="personal_information">Personal Information</string>
    <string name="phone_no">Phone No.</string>
    <string name="address_info">91/C, Shastri Nagar, Ghaziabad</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="ghaziabad">Ghaziabad</string>
    <string name="treatment_information">Treatment Information</string>
    <string name="lab_name">Lab Name</string>
    <string name="dayalchand_labs_its_muradnagar">Dayalchand Labs, ITS Muradnagar, Ghaziabad</string>
    <string name="select_severity_level">Select Severity Level</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="l3">L3</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="declined_to_come">Declined to come?</string>
    <string name="yes">Yes</string>
    <string name="patient_details">Patient Details</string>
    <string name="pt51s1">PT51S1</string>
    <string name="_9867412325">9867412325</string>
    <string name="assigned_hospital">Assigned Hospital</string>
    <string name="modi_hospital_china">Modi Hospital, China</string>

    <!--    String resources @Diagnosis Complete-->
    <string name="diagnosis_complete">Diagnosis Complete</string>

    <!--    String resources @Profile Page-->
    <string name="my_profile">My Profile</string>
    <string name="doct101">DOCT101</string>
    <string name="shubham_goswami">Shubham Goswami</string>
    <string name="about_me">About Me</string>
    <string name="profile_info">Dr. Naresh Sharma is a practicing General Physician. He has received his degree M.D. General Medicine in the year 2000 from Saint Petersberg State Medical Academy, Saint Petersberg, Russia. Dr. Sharma has vast work experience including working at Government run hospitals. He set up his clinic at 110, GF, Abhay Khand-3, Indirapuram, Ghaziabad in the year 2005 and in the year of 2011, he set up a 25 bedded nursing home named “ISHU HEALTH CARE”.</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_num">7011873693</string>
    <string name="update_details">Update Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialer">dialer</string>
    <string name="patient_declined_count">Number of patients who were declined to be examined by the doctor</string>
    <string name="number_of_patient_left_unassigned_by_the_doctor">Number of patient left unassigned by the doctor</string>
    <string name="profile_photo">profile photo</string>
    <string name="id">id</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="gender">Gender</string>
    <string name="hospital">Hospital</string>
    <string name="open_settings">Open Settings</string>
    <string name="patients_declined">Patients Declined</string>
    <string name="unassigned_patients">Unassigned Patients</string>
    <string name="overflow_button">overflow button</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="back_button">back button</string>
    <string name="patient_assigned_level">Patient assigned level</string>
    <string name="to_change_hospital">To change Hospital</string>
    <string name="click_here">Click here</string>
    <string name="declinedToCome">Declined to come</string>
    <string name="number_of_available_hospitals">Number of available Hospitals</string>
    <string name="hospital_list">Hospital List</string>
    <string name="click_the_card_to_change_the_hospital">Click the card to change the hospital</string>
    <string name="change_hospital">Change Hospital</string>
    <string name="xyz_hospital_sector_32_gurgaon">XYZ Hospital, Sector 32, Gurgaon</string>
    <string name="next_button">next button</string>
    <string name="_0">0</string>

    <style name="patient_declined_count">
        number_of_patients_who_were_declined_to_be_examined_by_the_doctor
    </style>

</resources>