<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.ui.ProfileFragment">

            <TextView
                android:id="@+id/dp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/sen_extrabold"
                android:text="@string/my_profile"
                android:textColor="#008DB9"
                android:textSize="28sp" />


            <Spinner
                android:layout_toRightOf="@id/dp_text"
                android:id="@+id/spinner"
                android:layout_marginTop="36dp"
                android:layout_marginLeft="12dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_dropdown"
                android:layout_marginRight="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <androidx.cardview.widget.CardView
                android:id="@+id/doc_profile_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dp_text"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="12dp"
                app:cardBackgroundColor="#008DB9"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/doc_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sen_bold"
                            android:text="@string/doct101"
                            android:textColor="#fff"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/doc_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/sen_extrabold"
                            android:text="@string/shubham_goswami"
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/doc_age_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/sen_bold"
                            android:text="@string/male_62_years_old"
                            android:textColor="#fff"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/doc_photo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:src="@drawable/doct_img" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/doc_profile_card"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_bold"
                android:text="@string/about_me"
                android:textColor="#424242"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/doc_profile_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_me"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_regular"
                android:text="@string/profile_info"
                android:textColor="#424242"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/contact_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/doc_profile_details"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_bold"
                android:text="@string/contact_information"
                android:textColor="#424242"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_no_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_information"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_regular"
                android:text="@string/phone_no"
                android:textColor="#424242"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/doc_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_no_head"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_bold"
                android:text="@string/phone_num"
                android:textColor="#424242"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/doc_phone_num"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_regular"
                android:text="@string/address"
                android:textColor="#424242"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/doc_address_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_head"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/sen_bold"
                android:text="@string/address_info"
                android:textColor="#424242"
                android:textSize="16sp" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>