<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.ui.PatientUnassignedFragment">
            <TextView
                android:id="@+id/dp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginLeft="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_32"
                android:fontFamily="@font/sen_extrabold"
                android:text="@string/unassigned_patients"
                android:textColor="@color/blue"
                android:textSize="@dimen/dimen_text_28" />

            <androidx.cardview.widget.CardView
                android:id="@+id/examine_pending_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dp_text"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_32"
                android:layout_marginBottom="@dimen/dimen_12"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="@dimen/dimen_8"
                app:cardElevation="@dimen/dimen_8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_16">

                    <com.robinhood.ticker.TickerView
                        android:id="@+id/unassignedPatientsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_4"
                        android:layout_marginLeft="@dimen/dimen_4"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:text="0"
                        android:textSize="@dimen/dimen_text_40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dimen_20"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:fontFamily="@font/sen_bold"
                        android:text="@string/number_of_patient_left_unassigned_by_the_doctor"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_text_16" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/examine_pending_card"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginEnd="@dimen/dimen_32"
                android:fontFamily="@font/sen_bold"
                android:text="@string/patients_list"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/dimen_text_20" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_4"
                android:layout_marginEnd="@dimen/dimen_32"
                android:fontFamily="@font/sen_regular"
                android:text="@string/click_the_card_to_examine_the_patient"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/dimen_text_14" />

            <LinearLayout
                android:id="@+id/list_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_32"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="start"
                    android:text="@string/patient_id"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_weight="2.2"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_weight="0.8"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="start"
                    android:text="@string/age"
                    android:textColor="@color/dark_grey" />

                <!-- Empty space in right -->
                <View
                    android:layout_width="@dimen/dimen_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7" />
            </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_below="@id/list_header"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/heartbeat_loading" />

            <TextView
                android:id="@+id/open_settings"
                android:layout_below="@id/animationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen_regular"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="-100dp"
                android:textSize="@dimen/dimen_text_16"
                android:text="@string/open_settings"
                android:textColor="@color/colorPrimaryDark" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/open_settings"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_4"
                android:layout_marginEnd="@dimen/dimen_20"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_view" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>